--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://114.113.148.187:3306/test
-username=root
-password=ppiiss#
+url=jdbc:mysql://120.77.44.145:3306/mympsx
+username=piccasi
+password=piccasi1234
 #\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570
 initialSize=0
 #\u5b9a\u4e49\u6700\u5927\u8fde\u63a5\u6570
