--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,8 +46,16 @@
 	<servlet-mapping>
 		<servlet-name>SpringMVC</servlet-name>
 		<!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
-		<url-pattern>*.do</url-pattern>
+		<!-- <url-pattern>*.do</url-pattern> -->
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- 显示ico -->
+	<servlet-mapping>
+       <servlet-name>default</servlet-name>
+       <url-pattern>*.ico</url-pattern>
+    </servlet-mapping>
+    
 	<welcome-file-list>
 		<welcome-file>/index.html</welcome-file>
 	</welcome-file-list>
