--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,277 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.lottery</groupId>
-  <artifactId>lottery</artifactId>
+  <groupId>com.hainan-online</groupId>
+  <artifactId>grass-care</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
   
 	<properties>
-		<java_source_version>1.7</java_source_version>
-		<java_target_version>1.7</java_target_version>
+		<!-- spring版本号 -->
+		<spring.version>3.2.0.RELEASE</spring.version>
+		<!-- mybatis版本号 -->
+		<mybatis.version>3.2.0</mybatis.version>
+		<!-- log4j日志文件管理包版本 -->
+		<slf4j.version>1.6.4</slf4j.version>
+		<log4j.version>1.2.16</log4j.version>
+		<slf4j.version>1.6.4</slf4j.version> 
 		<jetty.version>6.1.9</jetty.version>
 	</properties>
+
+	<dependencies>
+	<!-- 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
+		spring核心包
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>servlet-api</artifactId>
+    		<version>2.5</version>
+    		<scope>provided</scope>
+		</dependency>
+		
+		mybatis核心包
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		mybatis/spring包
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		导入java ee jar 包
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
+		导入Mysql数据库链接jar包
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.32</version>
+		</dependency>
+		导入dbcp的jar包，用来在applicationContext.xml中配置数据库
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		JSTL标签类
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		日志文件管理包
+		log start
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		
+		
+		格式化对象，方便输出日志
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.18</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		log end
+		映入JSON
+		<dependency>
+		  	<groupId>org.codehaus.jackson</groupId>
+  			<artifactId>jackson-core-asl</artifactId>
+  			<version>1.8.0</version>
+  		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.11</version>
+		</dependency>
+		上传组件包
+		<dependency>
+			  <groupId>commons-fileupload</groupId>
+  			  <artifactId>commons-fileupload</artifactId>
+  			  <version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+		  	<artifactId>aspectjrt</artifactId>
+		 	<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>io.netty</groupId>
+		  <artifactId>netty-all</artifactId>
+		  <version>4.1.9.Final</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>tcljava</groupId>
+		  <artifactId>tcljava</artifactId>
+		  <version>1.0</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\tcljava.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>jacl</groupId>
+		  <artifactId>jacl</artifactId>
+		  <version>1.0</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\jacl.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>bafCore</groupId>
+		  <artifactId>bafCore</artifactId>
+		  <version>0.9</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\bafCore-0.9.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>bafEjb</groupId>
+		  <artifactId>bafEjb</artifactId>
+		  <version>1.0</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\bafEjb.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>javax</groupId>
+		  <artifactId>ejb</artifactId>
+		  <version>1.0</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\javax.ejb.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>commons</groupId>
+		  <artifactId>digester</artifactId>
+		  <version>1.0</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\commons-digester.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>commons</groupId>
+		  <artifactId>lang</artifactId>
+		  <version>2.2</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\commons-lang-2.2.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>org.json</groupId>
+		  <artifactId>json</artifactId>
+		  <version>20160810</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\json-20160810.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>com.baidu</groupId>
+		  <artifactId>ocr</artifactId>
+		  <version>1.3.7</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\ocr_sdk-1.3.7.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>com.baidu</groupId>
+		  <artifactId>aip</artifactId>
+		  <version>1.3.7</version>
+		  <scope>system</scope>
+		  <systemPath>D:\workhna\grass-care\lib\aip-core-1.3.7.jar</systemPath>
+		</dependency> -->
+	</dependencies>
+	
+	
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 
@@ -26,10 +286,30 @@
                     <target>${java_target_version}</target>
                     <compilerArguments>  
         				<verbose />  
-        				<bootclasspath>${java.home}/lib/rt.jar</bootclasspath>  
+        				<bootclasspath>${java.home}/lib/rt.jar</bootclasspath>
+        				<extdirs>src\main\webapp\WEB-INF\lib</extdirs> 
     				</compilerArguments>
                 </configuration>
             </plugin>
+
+			<!-- 将本地依赖包打进war包，即sope为system的依赖包 -->
+<!-- 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/lib</outputDirectory>
+							<includeScope>system</includeScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
 
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -51,6 +331,6 @@
 			</plugin>
 		</plugins>
 		
-		<finalName>lottery</finalName>
+		<finalName>grass</finalName>
 	</build>
 </project>
