--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,8 @@
   
   
 	<properties>
-		<!-- spring版本号 -->
-		<spring.version>3.2.0.RELEASE</spring.version>
-		<!-- mybatis版本号 -->
-		<mybatis.version>3.2.0</mybatis.version>
-		<!-- log4j日志文件管理包版本 -->
-		<slf4j.version>1.6.4</slf4j.version>
-		<log4j.version>1.2.16</log4j.version>
-		<slf4j.version>1.6.4</slf4j.version> 
+		<java_source_version>1.7</java_source_version>
+		<java_target_version>1.7</java_target_version>
 		<jetty.version>6.1.9</jetty.version>
 	</properties>
 
