--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   
   
 	<properties>
+		<!-- <java_source_version>1.7</java_source_version> -->
+		<java_target_version>1.7</java_target_version>
 		<!-- spring版本号 -->
 		<spring.version>3.2.0.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
