--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
   
   
 	<properties>
-		<!-- <java_source_version>1.7</java_source_version> -->
+		<java_source_version>1.7</java_source_version>
 		<java_target_version>1.7</java_target_version>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<jetty.version>6.1.9</jetty.version>
 	</properties>
 
@@ -284,6 +285,15 @@
     				</compilerArguments>
                 </configuration>
             </plugin>
+            
+             <plugin>  
+		        <groupId>org.apache.maven.plugins</groupId>  
+		        <artifactId>maven-surefire-plugin</artifactId>  
+		        <version>2.5</version>
+		        <configuration>  
+		          <skipTests>true</skipTests>  
+		        </configuration>  
+      		</plugin>
 
 			<!-- 将本地依赖包打进war包，即sope为system的依赖包 -->
 <!-- 			<plugin>
